alterações no index e css

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,18 +24,10 @@ li {
   list-style: none;
 }
 
-.calendar {
-  margin: 100px;
-  margin-top: 100px;
-}
-
-.calendar__week1,
-.calendar__week2,
-.calendar__week3,
-.calendar__week4,
-.calendar__week5,
-.calendar__week6 {
+.calendar__block {
   display: flex;
+  flex-wrap: wrap;
+  width: 714px;
   text-align: center;
   line-height: 100px;
   transition-duration: 0, 5s;
@@ -46,200 +38,196 @@ li {
   height: var(--square-height);
   background: var(--square-background);
   border: var(--square-border);
-  margin: 1px;
+  margin: var(--square-margin-right);
 }
 
-.calendar__week1 .calendar__day--sunday {
-  margin: 0 0 0 613px;
-}
-
-.calendar__week1 .calendar__day--sunday::before {
+.calendar__block .calendar__day:first-child::before {
   content: '1';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week2 .calendar__day--monday::before {
+.calendar__block .calendar__day:nth-child(2)::before {
   content: '2';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week2 .calendar__day--tuesday::before {
+.calendar__block .calendar__day:nth-child(3)::before {
   content: '3';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week2 .calendar__day--wednesday::before {
+.calendar__block .calendar__day:nth-child(4)::before {
   content: '4';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week2 .calendar__day--thursday::before {
+.calendar__block .calendar__day:nth-child(5)::before {
   content: '5';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week2 .calendar__day--friday::before {
+.calendar__block .calendar__day:nth-child(6)::before {
   content: '6';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week2 .calendar__day--saturday::before {
+.calendar__block .calendar__day:nth-child(7)::before {
   content: '7';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week2 .calendar__day--sunday::before {
+.calendar__block .calendar__day:nth-child(8)::before {
   content: '8';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week3 .calendar__day--monday::before {
+.calendar__block .calendar__day:nth-child(9)::before {
   content: '9';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week3 .calendar__day--tuesday::before {
+.calendar__block .calendar__day:nth-child(10)::before {
   content: '10';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week3 .calendar__day--wednesday::before {
+.calendar__block .calendar__day:nth-child(11)::before {
   content: '11';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week3 .calendar__day--thursday::before {
+.calendar__block .calendar__day:nth-child(12)::before {
   content: '12';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week3 .calendar__day--friday::before {
+.calendar__block .calendar__day:nth-child(13)::before {
   content: '13';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week3 .calendar__day--saturday::before {
+.calendar__block .calendar__day:nth-child(14)::before {
   content: '14';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week3 .calendar__day--sunday::before {
+.calendar__block .calendar__day:nth-child(15)::before {
   content: '15';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week4 .calendar__day--monday::before {
+.calendar__block .calendar__day:nth-child(16)::before {
   content: '16';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week4 .calendar__day--tuesday::before {
+.calendar__block .calendar__day:nth-child(17)::before {
   content: '17';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week4 .calendar__day--wednesday::before {
+.calendar__block .calendar__day:nth-child(18)::before {
   content: '18';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week4 .calendar__day--thursday::before {
+.calendar__block .calendar__day:nth-child(19)::before {
   content: '19';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week4 .calendar__day--friday::before {
+.calendar__block .calendar__day:nth-child(20)::before {
   content: '20';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week4 .calendar__day--saturday::before {
+.calendar__block .calendar__day:nth-child(21)::before {
   content: '21';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week4 .calendar__day--sunday::before {
+.calendar__block .calendar__day:nth-child(22)::before {
   content: '22';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week5 .calendar__day--monday::before {
+.calendar__block .calendar__day:nth-child(23)::before {
   content: '23';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week5 .calendar__day--tuesday::before {
+.calendar__block .calendar__day:nth-child(24)::before {
   content: '24';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week5 .calendar__day--wednesday::before {
+.calendar__block .calendar__day:nth-child(25)::before {
   content: '25';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week5 .calendar__day--thursday::before {
+.calendar__block .calendar__day:nth-child(26)::before {
   content: '26';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week5 .calendar__day--friday::before {
+.calendar__block .calendar__day:nth-child(27)::before {
   content: '27';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week5 .calendar__day--saturday::before {
+.calendar__block .calendar__day:nth-child(28)::before {
   content: '28';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week5 .calendar__day--sunday::before {
+.calendar__block .calendar__day:nth-child(29)::before {
   content: '29';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week6 .calendar__day--monday::before {
+.calendar__block .calendar__day:nth-child(30)::before {
   content: '30';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week6 .calendar__day--tuesday::before {
+.calendar__block .calendar__day:nth-child(31)::before {
   content: '31';
-  font-family: var(--square-font);
   font-size: var(--square-size);
+  font-family: var(--square-font);
 }
 
-.calendar__week3 .calendar__day--thursday:hover {
+.calendar__block .calendar__day:nth-child(12):hover {
   cursor: pointer;
   background: #ffbfcb;
   transform: translate(0, -20px);
