--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,4 @@
-$lengths: (28, 29, 30, 31);
-$day: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
+@import './vearable';
 
 * {
   box-sizing: border-box;
