--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,8 +12,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
-  margin: 10px;
-  width: $calendar-width;
+  padding: 10px;
+  width: 706px;
 
   &__day {
     background-color: #eee;
@@ -58,9 +58,5 @@ body {
         display: none;
       }
     }
-  }
-
-  &__day:first-child {
-    margin-left: 618px;
   }
 }
