add border-box, change width

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
 @import './variables';
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
@@ -13,7 +17,25 @@ body {
   flex-wrap: wrap;
   gap: $gap;
   padding: 10px;
-  width: 706px;
+  width: 806px;
+
+  @each $day, $day-position in $day-map {
+    &--start-day-#{$day} .calendar__day:first-child {
+      margin-left: ($cell-size + 1) * $day-position;
+    }
+  }
+
+  @for $i from 1 through 31 {
+    &:nth-child(n + #{$i})::before {
+      content: '#{$i}';
+    }
+  }
+
+  @for $n from 28 through 31 {
+    &.calendar--month-length-#{$n} .calendar__day:nth-child(n + #{$n + 1}) {
+      display: none;
+    }
+  }
 
   &__day {
     background-color: #eee;
@@ -39,24 +61,6 @@ body {
       position: absolute;
       font-size: 30px;
       font-family: Arial, sans-serif;
-    }
-
-    @each $day, $day-position in $day-map {
-      &--start-day-#{$day} .calendar__day:first-child {
-        margin-left: ($cell-size + 1) * $day-position;
-      }
-    }
-
-    @for $i from 1 through 31 {
-      &:nth-child(n + #{$i})::before {
-        content: '#{$i}';
-      }
-    }
-
-    @for $n from 28 through 31 {
-      &.calendar--month-length-#{$n} .calendar__day:nth-child(n + #{$n + 1}) {
-        display: none;
-      }
     }
   }
 }
