--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 $cell-size: 100px;
 $gap-size: 1px;
+$transition-time: 0.5s;
 $days-in-week: 7;
 $days: (
   'mon': 0,
@@ -33,7 +34,9 @@ body {
     position: relative;
     background-color: #eee;
     border: 1px solid black;
-    transition: all 0.5s;
+    transition:
+      transform 0.5s,
+      background-color 0.5s;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
