--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,11 +18,11 @@ body {
   flex-wrap: wrap;
   gap: $gap;
   padding: 10px;
-  width: 707px;
+  width: $calendar-width;
 
   @each $day, $day-position in $day-map {
     &--start-day-#{$day} .calendar__day:first-child {
-      margin-left: ($cell-size + 1) * $day-position;
+      margin-left: ($cell-size + $gap) * $day-position;
     }
   }
 
