--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
-@import './variables';
+@import './utils/variables';
+@import './blocks/calendar';
 
 body {
   margin: 0;
@@ -6,62 +7,5 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  width: ($days-size + $gap) * 7;
-  gap: 1px;
-  padding: 10;
-
-  &__days {
-    box-sizing: border-box;
-    width: $days-size;
-    height: $days-size;
-    background-color: $bg-days;
-    border: 1px solid black;
-    padding: 10px;
-
-    @for $count from 1 through 31 {
-      &:nth-child(#{$count})::before {
-        content: '#{$count}';
-
-        width: $digit-size;
-        height: $digit-size;
-
-        position: absolute;
-
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    }
-
-    &:hover {
-      transform: translateY(-20px);
-      transition-duration: 0.5s;
-      background-color: pink;
-      cursor: pointer;
-    }
-  }
-}
-
-@each $day, $index in $week {
-  .calendar--start-day-#{$day} {
-    .calendar__days:first-child {
-      margin-left: ($days-size + $gap) * $index;
-    }
-  }
-}
-
-@for $day from 1 through 31 {
-  .calendar--month-length-#{$day} {
-    .calendar__days:nth-child(n + #{$day + 1}) {
-      display: none;
-    }
-  }
+  font-family: Arial, sans-serif;
 }
