--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,16 +1,4 @@
-$day-size: 100px;
-$gap: 1px;
-$padding: 10px;
-$columns: 7;
-$start-days: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
+@import 'variables';
 
 * {
   margin: 0;
@@ -30,61 +18,54 @@ body {
   margin: 0;
 }
 
-.container {
-  margin: 0 auto;
+.calendar {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: $gap;
+  padding: $padding;
+  box-sizing: border-box;
+  width: calc(
+    #{$day-size} * #{$columns} + (#{$columns} - 1) * #{$gap} + 2 * #{$padding}
+  );
 
-  .calendar {
+  @each $day, $margin in $start-days {
+    &--start-day-#{$day} .calendar__day:nth-child(1) {
+      margin-left: calc(#{$margin} * (#{$day-size} + #{$gap}));
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    border: 1px solid black;
+    background-color: #eee;
+    width: $day-size;
+    height: $day-size;
     display: flex;
-    flex-wrap: wrap;
-    gap: $gap;
-    padding: $padding;
-    box-sizing: border-box;
-    width: calc(
-      #{$day-size} * #{$columns} + (#{$columns} - 1) * #{$gap} + 2 * #{$padding}
-    );
-
-    @each $day, $margin in $start-days {
-      &--start-day-#{$day} .calendar__day--1 {
-        margin-left: calc(#{$margin} * (#{$day-size} + #{$gap}));
-      }
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: all 0.5s;
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+      transition: all 0.5s;
     }
+  }
 
-    @for $length from 28 through 31 {
-      &--month-length-#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
-        display: none;
-      }
-    }
-
-    &__day {
-      border: 1px solid black;
-      background-color: #eee;
-      width: $day-size;
-      height: $day-size;
+  @for $i from 1 through 31 {
+    .calendar__day:nth-child(#{$i})::before {
+      content: '#{$i}';
       display: flex;
       justify-content: center;
       align-items: center;
-      position: relative;
-      transition: all 0.5s;
-      &:hover {
-        cursor: pointer;
-        background-color: #ffbfcb;
-        transform: translateY(-20px);
-        transition: all 0.5s;
-      }
-    }
-
-    @for $i from 1 through 31 {
-      &__day--#{$i}::before {
-        content: '#{$i}';
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-      }
+      width: 100%;
+      height: 100%;
     }
   }
 }
