--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,13 +29,13 @@ body {
   );
 
   @each $day, $margin in $start-days {
-    &--start-day-#{$day} .calendar__day:nth-child(1) {
+    &--start-day-#{$day} &__day:nth-child(1) {
       margin-left: calc(#{$margin} * (#{$day-size} + #{$gap}));
     }
   }
 
   @for $length from 28 through 31 {
-    &--month-length-#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
+    &--month-length-#{$length} &__day:nth-child(n + #{$length + 1}) {
       display: none;
     }
   }
@@ -58,14 +58,17 @@ body {
     }
   }
 
+  &__day::before {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+
   @for $i from 1 through 31 {
-    .calendar__day:nth-child(#{$i})::before {
+    &__day:nth-child(#{$i})::before {
       content: '#{$i}';
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
     }
   }
 }
