--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,12 @@
+@import './main';
+
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
 }
