--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,15 @@
 @import './blocks/calendar';
 @import './utils/variables';
 
-body {
+* {
   margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
