--- a/src/styles/calendar/calendar.scss
+++ b/src/styles/calendar/calendar.scss
@@ -1,13 +1,5 @@
 @use '../utils/variables' as *;
 
-@for $i from 1 through 31 {
-  .calendar__day:nth-child(#{$i})::before {
-    content: '#{$i}';
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-  }
-}
-
 .calendar {
   display: flex;
   flex-wrap: wrap;
@@ -15,15 +7,42 @@
   width: $calendar-width;
   gap: $gap;
   align-content: flex-end;
+
+  @for $i from 1 through 31 {
+    &--month-length-#{$i} div:nth-child(-n + #{$i}) {
+      display: flex;
+    }
   }
 
-.calendar__day {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: $day-background-color;
-  width: $day-width;
-  height: $day-height;
-  border: 1px solid black;
-  box-sizing: border-box;
+  @each $day, $position in $start-day {
+    &--start-day-#{$day} div:first-child {
+      margin-left: $position;
+    }
+  }
+
+  &__day {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: $day-background-color;
+    width: $day-width;
+    height: $day-height;
+    border: 1px solid black;
+    box-sizing: border-box;
+    transition: 0.5s;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+      }
+    }
+
+    &:hover {
+      transform: translateY(-20px);
+      cursor: pointer;
+      background-color: #ffbfcb;
+    }
+  }
 }
