--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,22 +1,8 @@
+@import './variables';
+
 * {
   box-sizing: border-box;
 }
-
-$box-size: 100px;
-$bg-color: #eee;
-$pink-color: #ffbfcb;
-$days: (
-  'mon': 0,
-  'tue': 1,
-  'wed': 2,
-  'thu': 3,
-  'fri': 4,
-  'sat': 5,
-  'sun': 6,
-);
-$columns: 7;
-$days-gap: 1px;
-$number: 31;
 
 body {
   margin: 0;
@@ -41,7 +27,7 @@ body {
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    transition-duration: 0.5s;
 
     @for $number from 1 through 31 {
       &:nth-child(#{$number})::before {
@@ -51,6 +37,7 @@ body {
         font-size: 30px;
       }
     }
+
     &:hover {
       transform: translateY(-20px);
       background-color: $pink-color;
