--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,14 +1,15 @@
 $day-background-color: #eee;
+$day-background-color-hover: #ffbfcb;
 $day-width: 100px;
 $day-height: 100px;
 $gap: 1px;
 $column-number: 7;
 $total-gap-distance: $gap * ($column-number - 1);
-$calendar-width: calc(($day-width * $column-number) + $total-gap-distance);
+$calendar-width: ($day-width * $column-number) + $total-gap-distance;
 $start-day: 'mon' 0,
-  'tue' calc(($day-width) + ($gap)),
-  'wed' calc(($day-width * 2) + ($gap * 2)),
-  'thu' calc(($day-width * 3) + ($gap * 3)),
-  'fri' calc(($day-width * 4) + ($gap * 4)),
-  'sat' calc(($day-width * 5) + ($gap * 5)),
-  'sun' calc(($day-width * 6) + ($gap * 6));
+  'tue' ($day-width) + ($gap),
+  'wed' ($day-width * 2) + ($gap * 2),
+  'thu' ($day-width * 3) + ($gap * 3),
+  'fri' ($day-width * 4) + ($gap * 4),
+  'sat' ($day-width * 5) + ($gap * 5),
+  'sun' ($day-width * 6) + ($gap * 6);
