Moved calculations inside margin-left

--- a/src/styles/calendar/calendar.scss
+++ b/src/styles/calendar/calendar.scss
@@ -16,7 +16,7 @@
 
   @each $day, $position in $start-day {
     &--start-day-#{$day} &__day:first-child {
-      margin-left: $position;
+      margin-left: ($day-width * $position) + ($gap * $position);
     }
   }
 
