--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,92 @@
+$day-size: 100px;
+$gap: 1px;
+$border-size: 1px;
+$total-columns: 7;
+$total-size: $day-size + $border-size;
+$padding: 10px;
+$calendar-width: ($total-columns * $day-size) + (6 * $gap);
+$margin-left: ($total-size + $gap) * 6;
+$day-of-week: (
+  sun: 0,
+  mon: $total-size + $gap,
+  tue: ($total-size + $gap) * 2,
+  wed: ($total-size + $gap) * 3,
+  thu: ($total-size + $gap) * 4,
+  fri: ($total-size + $gap) * 5,
+  sat: ($total-size + $gap) * 6
+);
+$month-lengths: 28, 29, 30, 31;
+
+$day-background: #eee;
+$day-border: 1px solid black;
+$day-in-month: 31;
+$number-font-family: Arial, sans-serif;
+$number-font-size: 30px;
+// $start-day-in-week: sun;
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
 }
+
+.calendar {
+  display: flex;
+  justify-content: center;
+  padding: $padding;
+
+  &__field {
+    display: flex;
+    flex-wrap: wrap;
+    gap: $gap;
+    width: $calendar-width;
+    }
+
+  &__day {
+    box-sizing: border-box;
+    width: $day-size;
+    height: $day-size;
+    border: $day-border;
+    background-color: $day-background;
+
+    // position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: $number-font-family;
+    font-size: $number-font-size;
+
+    transition-duration: 0.5s;
+    transition-property: transform, background-color;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+
+    @for $i from 1 through $day-in-month {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
+  }
+
+
+  &.start-day-sun .calendar__day:first-child {
+    margin-left: $margin-left;
+  }
+
+  @for $days from 28 through 30 {
+    &.month-length-#{$days} .calendar__day:nth-child(n + #{$days + 1}) {
+      display: none;
+    }
+  }
+
+  &.month-length-31 .calendar__day:nth-child(n + 32) {
+    display: none;
+  }
+}
+
