--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,6 +29,8 @@ body {
   width: 100px;
   height: 100px;
   border: 1px solid black;
+  cursor: pointer;
+  transition: 0.5s;
 }
 
 .calendar__day:nth-child(1)::before {
@@ -156,10 +158,8 @@ body {
 }
 
 .calendar__day:hover {
-  cursor: pointer;
   background-color: #ffbfcb;
   transform: translate(0, -20px);
-  transition-duration: 0.5s;
 }
 
 .calendar--start-day-mon .calendar__day:first-child {
