--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -15,6 +15,8 @@
     width: $cell-size;
     height: $cell-size;
     border: 1px solid black;
+    cursor: pointer;
+    transition: 0.5s;
 
     @for $i from 1 through $count-of-days {
       &:nth-child(#{$i})::before {
@@ -23,10 +25,8 @@
     }
 
     &:hover {
-      cursor: pointer;
       background-color: #ffbfcb;
       transform: translate(0, -20px);
-      transition-duration: 0.5s;
     }
   }
 
