--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,16 @@
-body {
+@import './utils/variables';
+@import './blocks/calendar';
+
+* {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  transition: 0.5s ease;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
