--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,6 +32,11 @@ body {
   padding: 10px;
 
   &__day {
+    display: flex;
+    font-size: 30px;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
     width: $day-size;
     height: $day-size;
@@ -43,24 +48,19 @@ body {
 
   @for $i from 1 through 31 {
     &__day--#{$i}::before {
-      display: block;
       content: '#{$i}';
-      text-align: center;
-      line-height: $day-size;
-      font-size: 30px;
-      font-family: Arial, sans-serif;
     }
   }
 
   @each $day, $margin in $week {
-    &--start-#{$day} :first-child {
+    &--start-day-#{$day} :first-child {
       margin-left: $margin;
     }
   }
 
   @for $i from 28 through 31 {
-    &--month-#{$i} :nth-child(n + #{$i + 1}) {
-      visibility: hidden;
+    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+      display: none;
     }
   }
 
