calendar--month-length-- functionality added

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -34,4 +34,10 @@
         margin-left: #{(($calendarCellWidth + $calendarCellGap) * $offset)}px;
       }
   }
+
+  @for $i from 28 through 31 {
+    &--month-length--#{$i} :nth-child(n+#{($i + 1)}) {
+      display: none;
+    }
+  }
 }
