--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,7 +20,7 @@ $day-offsets: (
   gap: $gap-size;
   flex-wrap: wrap;
   padding: $padding-size;
-  max-width: calc(7 * $day-size + 6 * $gap-size + 2 * $padding-size);
+  width: calc(7 * $day-size + 6 * $gap-size + 2 * $padding-size);
   margin: auto;
   position: absolute;
   top: 50%;
