finnished the task

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,21 @@
-body {
+@import 'variables/variables';
+@import 'blocks/reset';
+
+* {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
+
+html {
+  font-size: $font-size;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@import 'blocks/styles';
