--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -11,6 +11,9 @@
     height: $cell-size;
     background-color: $cell-color;
     border: 1px solid $cell-border-color;
+    position: relative;
+    text-align: center;
+    line-height: 98px;
     transition:
       transform 0.5s linear,
       background-color 0.5s linear;
@@ -21,14 +24,11 @@
       cursor: pointer;
     }
 
-    @for $index from 1 through 31 {
-      &--number-#{$index}::before {
-        content: '#{$index}';
-        display: flex;
-        width: 100%;
-        height: 100%;
-        align-items: center;
-        justify-content: center;
+    @for $number from 1 through 31 {
+      &:nth-child(#{$number}) {
+        &::before {
+          content: '#{$number}';
+        }
       }
     }
   }
