--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -13,11 +13,18 @@
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
+    cursor: pointer;
+    transition: 0.5s;
 
     &::before {
       width: fit-content;
       font-family: Arial, sans-serif;
       font-size: 30px;
+    }
+
+    &:hover {
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
     }
   }
 
