fixed errors but test failed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,7 +28,15 @@
     height: $cell-size;
     width: $cell-size;
     border: $border-property;
-    position: relative;
+
+    // position: relative;
+
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     transition:
       transform $transition-time,
@@ -37,15 +45,6 @@
     @for $date from 1 through 31 {
       &:nth-child(#{$date})::before {
         content: '#{$date}';
-        font-family: Arial, sans-serif;
-        font-size: 30px;
-        line-height: 30px;
-        text-align: center;
-        position: absolute;
-
-        transform: translate(50%, 50%);
-        bottom: 49px;
-        right: 48.5px;
       }
     }
 
