add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -18,32 +18,30 @@
 
     position: relative;
     cursor: pointer;
-    transition: 0.5s;
+    transition:
+      transform 0.5s,
+      background-color 0.5s;
   }
 
   &__day:hover {
     background-color: #ffbfcb;
     transform: translateY(-20px);
   }
-}
 
-@for $i from 1 through 31 {
-  .calendar__day:nth-child(#{$i})::before {
-    content: '#{$i}';
+  @for $i from 1 through 31 {
+    &__day:nth-child(#{$i})::before {
+      content: '#{$i}';
+    }
   }
-}
 
-@for $values from 28 through 31 {
-  .calendar--month-length-#{$values} {
-    .calendar__day:nth-child(n + #{$values + 1}) {
+  @for $values from 28 through 31 {
+    &--month-length-#{$values} &__day:nth-child(n + #{$values + 1}) {
       display: none;
     }
   }
-}
 
-@each $name, $day in $start-days {
-  .calendar--start-day-#{$name} {
-    .calendar__day:first-child {
+  @each $name, $day in $start-days {
+    &--start-day-#{$name} &__day:first-child {
       margin-left: (($day - 1) * $day-size) + (($day - 1) * $gap);
     }
   }
