--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -20,7 +20,7 @@
 
     border: 1px solid $border-color;
 
-    transition: transform 0.5s;
+    transition: all 0.5s;
 
     &:hover {
       cursor: pointer;
@@ -38,7 +38,7 @@
   }
 
   @each $name, $value in $days {
-    &--start-#{$name} &__day:first-child {
+    &--start-day-#{$name} &__day:first-child {
       margin-left: ($value * ($gap-between-days + $day-size));
     }
   }
