--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -8,8 +8,6 @@
   width: ($amount-of-day * $day-size) + (($amount-of-day - 1) * $gap-between-days) + 20px;
 
   &__day {
-    position: relative;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +18,8 @@
 
     border: 1px solid $border-color;
 
-    transition: all 0.5s;
+    transition-property: background-color, transform;
+    transition-duration: 0.5s;
 
     &:hover {
       cursor: pointer;
@@ -31,8 +30,6 @@
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
-
-        position: absolute;
       }
     }
   }
