--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,37 @@
+// Color variables
+$border-color: #000;
+$day-color: #eee;
+$hover-color: #ffbfcb;
+
+// Size variables
+$cell-size: 100px;
+$padding: 10px;
+$gap: 1px;
+$days-in-a-week: 7;
+$days: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
+//Page styles
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0;
+  height: 100vh;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+// Calendar styles
 .calendar {
   display: flex;
   flex-wrap: wrap;
